--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "all": "^0.0.0",
     "autoprefixer": "^10.4.4",
+    "file-loader": "^6.2.0",
+    "jquery": "^3.6.0",
     "lodash": "^4.17.21",
     "normalize.css": "^8.0.1",
     "postcss": "^8.4.12",
@@ -40,5 +43,8 @@
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4",
     "workbox-webpack-plugin": "^6.5.2"
+  },
+  "resolutions": {
+    "graceful-fs": "^4.2.9"
   }
 }
